// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pwngoal copy will auto-suggest terms 1`] = `
"[33m[39m
[33m ┌─────────┐[39m
 [33m│[39m [33moops...[39m [33m│[39m
[33m └─────────┘[39m
    ↳ Did you mean [32m[1mcopy spawn a TTY shell (linux)[22m[39m?

      [2mPress [22m[1mENTER[22m[2m to continue[22m
"
`;

exports[`pwngoal copy will prompt for term when not provided 1`] = `
"
 [36mCopy one-line reverse shell written in [1m[33mPython[36m[22m[39m

 [36m[1m→[22m[39m [39m[36m[1mreverse shell (python)[22m[39m[39m
   reverse shell (php)
   reverse shell (perl)
   reverse shell (ruby)
   reverse shell (bash)
   reverse shell (awk)
   spawn a TTY shell (linux)
   find files/folders with write access (linux)
"
`;

exports[`pwngoal scan will auto-suggest terms 1`] = `
"[33m[39m
[33m ┌─────────┐[39m
 [33m│[39m [33moops...[39m [33m│[39m
[33m └─────────┘[39m
    ↳ Did you mean [32m[1mscan ports[22m[39m?

      [2mPress [22m[1mENTER[22m[2m to continue[22m
"
`;

exports[`pwngoal scan will prompt for term when not provided 1`] = `
"
 [36mScan a port with nmap[39m

 [36m[1m→[22m[39m [39m[36m[1mport[22m[39m[39m
   ports
"
`;

exports[`pwngoal show --ip doesNotExist 1`] = `"No results for [31m[1mdoesNotExist[22m[39m"`;

exports[`pwngoal show -i 127.0.0.1 1`] = `
"[36m┌───────────┐[39m
[36m│[39m [36m[1m127.0.0.1[22m[39m [36m│[39m
[36m└───────────┘[39m
[1m[37m┌[39m[22m[1m[37m──────────[39m[22m[1m[37m┬[39m[22m[1m[37m───────[39m[22m[1m[37m┬[39m[22m[1m[37m─────────[39m[22m[1m[37m┬[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┐[39m[22m
[1m[37m│[39m[22m[1m[34m protocol [39m[22m[1m[37m│[39m[22m[1m[34m port  [39m[22m[1m[37m│[39m[22m[1m[34m service [39m[22m[1m[37m│[39m[22m[1m[34m version                    [39m[22m[1m[37m│[39m[22m
[1m[37m├[39m[22m[1m[37m──────────[39m[22m[1m[37m┼[39m[22m[1m[37m───────[39m[22m[1m[37m┼[39m[22m[1m[37m─────────[39m[22m[1m[37m┼[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┤[39m[22m
[1m[37m│[39m[22m tcp      [1m[37m│[39m[22m 21    [1m[37m│[39m[22m ftp     [1m[37m│[39m[22m ???                        [1m[37m│[39m[22m
[1m[37m├[39m[22m[1m[37m──────────[39m[22m[1m[37m┼[39m[22m[1m[37m───────[39m[22m[1m[37m┼[39m[22m[1m[37m─────────[39m[22m[1m[37m┼[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┤[39m[22m
[1m[37m│[39m[22m tcp      [1m[37m│[39m[22m 22    [1m[37m│[39m[22m ssh     [1m[37m│[39m[22m OpenSSH 7.8 (protocol 2.0) [1m[37m│[39m[22m
[1m[37m├[39m[22m[1m[37m──────────[39m[22m[1m[37m┼[39m[22m[1m[37m───────[39m[22m[1m[37m┼[39m[22m[1m[37m─────────[39m[22m[1m[37m┼[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┤[39m[22m
[1m[37m│[39m[22m tcp      [1m[37m│[39m[22m 25    [1m[37m│[39m[22m smtp    [1m[37m│[39m[22m ???                        [1m[37m│[39m[22m
[1m[37m├[39m[22m[1m[37m──────────[39m[22m[1m[37m┼[39m[22m[1m[37m───────[39m[22m[1m[37m┼[39m[22m[1m[37m─────────[39m[22m[1m[37m┼[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┤[39m[22m
[1m[37m│[39m[22m tcp      [1m[37m│[39m[22m 53    [1m[37m│[39m[22m dns     [1m[37m│[39m[22m ???                        [1m[37m│[39m[22m
[1m[37m├[39m[22m[1m[37m──────────[39m[22m[1m[37m┼[39m[22m[1m[37m───────[39m[22m[1m[37m┼[39m[22m[1m[37m─────────[39m[22m[1m[37m┼[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┤[39m[22m
[1m[37m│[39m[22m tcp      [1m[37m│[39m[22m 110   [1m[37m│[39m[22m pop3    [1m[37m│[39m[22m ???                        [1m[37m│[39m[22m
[1m[37m├[39m[22m[1m[37m──────────[39m[22m[1m[37m┼[39m[22m[1m[37m───────[39m[22m[1m[37m┼[39m[22m[1m[37m─────────[39m[22m[1m[37m┼[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┤[39m[22m
[1m[37m│[39m[22m tcp      [1m[37m│[39m[22m 143   [1m[37m│[39m[22m imap    [1m[37m│[39m[22m ???                        [1m[37m│[39m[22m
[1m[37m├[39m[22m[1m[37m──────────[39m[22m[1m[37m┼[39m[22m[1m[37m───────[39m[22m[1m[37m┼[39m[22m[1m[37m─────────[39m[22m[1m[37m┼[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┤[39m[22m
[1m[37m│[39m[22m tcp      [1m[37m│[39m[22m 161   [1m[37m│[39m[22m snmp    [1m[37m│[39m[22m ???                        [1m[37m│[39m[22m
[1m[37m├[39m[22m[1m[37m──────────[39m[22m[1m[37m┼[39m[22m[1m[37m───────[39m[22m[1m[37m┼[39m[22m[1m[37m─────────[39m[22m[1m[37m┼[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┤[39m[22m
[1m[37m│[39m[22m tcp      [1m[37m│[39m[22m 443   [1m[37m│[39m[22m https   [1m[37m│[39m[22m ???                        [1m[37m│[39m[22m
[1m[37m├[39m[22m[1m[37m──────────[39m[22m[1m[37m┼[39m[22m[1m[37m───────[39m[22m[1m[37m┼[39m[22m[1m[37m─────────[39m[22m[1m[37m┼[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┤[39m[22m
[1m[37m│[39m[22m tcp      [1m[37m│[39m[22m 445   [1m[37m│[39m[22m smb     [1m[37m│[39m[22m ???                        [1m[37m│[39m[22m
[1m[37m├[39m[22m[1m[37m──────────[39m[22m[1m[37m┼[39m[22m[1m[37m───────[39m[22m[1m[37m┼[39m[22m[1m[37m─────────[39m[22m[1m[37m┼[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┤[39m[22m
[1m[37m│[39m[22m tcp      [1m[37m│[39m[22m 631   [1m[37m│[39m[22m ipp     [1m[37m│[39m[22m CUPS 2.2                   [1m[37m│[39m[22m
[1m[37m├[39m[22m[1m[37m──────────[39m[22m[1m[37m┼[39m[22m[1m[37m───────[39m[22m[1m[37m┼[39m[22m[1m[37m─────────[39m[22m[1m[37m┼[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┤[39m[22m
[1m[37m│[39m[22m tcp      [1m[37m│[39m[22m 17600 [1m[37m│[39m[22m http    [1m[37m│[39m[22m Tornado httpd 4.2          [1m[37m│[39m[22m
[1m[37m└[39m[22m[1m[37m──────────[39m[22m[1m[37m┴[39m[22m[1m[37m───────[39m[22m[1m[37m┴[39m[22m[1m[37m─────────[39m[22m[1m[37m┴[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┘[39m[22m
 ↳ [2mTry \\"pwngoal suggest\\" to get some suggestions on what to do next[22m

"
`;

exports[`pwngoal show 127.0.0.1 1`] = `
"[36m┌───────────┐[39m
[36m│[39m [36m[1m127.0.0.1[22m[39m [36m│[39m
[36m└───────────┘[39m
[1m[37m┌[39m[22m[1m[37m──────────[39m[22m[1m[37m┬[39m[22m[1m[37m───────[39m[22m[1m[37m┬[39m[22m[1m[37m─────────[39m[22m[1m[37m┬[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┐[39m[22m
[1m[37m│[39m[22m[1m[34m protocol [39m[22m[1m[37m│[39m[22m[1m[34m port  [39m[22m[1m[37m│[39m[22m[1m[34m service [39m[22m[1m[37m│[39m[22m[1m[34m version                    [39m[22m[1m[37m│[39m[22m
[1m[37m├[39m[22m[1m[37m──────────[39m[22m[1m[37m┼[39m[22m[1m[37m───────[39m[22m[1m[37m┼[39m[22m[1m[37m─────────[39m[22m[1m[37m┼[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┤[39m[22m
[1m[37m│[39m[22m tcp      [1m[37m│[39m[22m 21    [1m[37m│[39m[22m ftp     [1m[37m│[39m[22m ???                        [1m[37m│[39m[22m
[1m[37m├[39m[22m[1m[37m──────────[39m[22m[1m[37m┼[39m[22m[1m[37m───────[39m[22m[1m[37m┼[39m[22m[1m[37m─────────[39m[22m[1m[37m┼[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┤[39m[22m
[1m[37m│[39m[22m tcp      [1m[37m│[39m[22m 22    [1m[37m│[39m[22m ssh     [1m[37m│[39m[22m OpenSSH 7.8 (protocol 2.0) [1m[37m│[39m[22m
[1m[37m├[39m[22m[1m[37m──────────[39m[22m[1m[37m┼[39m[22m[1m[37m───────[39m[22m[1m[37m┼[39m[22m[1m[37m─────────[39m[22m[1m[37m┼[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┤[39m[22m
[1m[37m│[39m[22m tcp      [1m[37m│[39m[22m 25    [1m[37m│[39m[22m smtp    [1m[37m│[39m[22m ???                        [1m[37m│[39m[22m
[1m[37m├[39m[22m[1m[37m──────────[39m[22m[1m[37m┼[39m[22m[1m[37m───────[39m[22m[1m[37m┼[39m[22m[1m[37m─────────[39m[22m[1m[37m┼[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┤[39m[22m
[1m[37m│[39m[22m tcp      [1m[37m│[39m[22m 53    [1m[37m│[39m[22m dns     [1m[37m│[39m[22m ???                        [1m[37m│[39m[22m
[1m[37m├[39m[22m[1m[37m──────────[39m[22m[1m[37m┼[39m[22m[1m[37m───────[39m[22m[1m[37m┼[39m[22m[1m[37m─────────[39m[22m[1m[37m┼[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┤[39m[22m
[1m[37m│[39m[22m tcp      [1m[37m│[39m[22m 110   [1m[37m│[39m[22m pop3    [1m[37m│[39m[22m ???                        [1m[37m│[39m[22m
[1m[37m├[39m[22m[1m[37m──────────[39m[22m[1m[37m┼[39m[22m[1m[37m───────[39m[22m[1m[37m┼[39m[22m[1m[37m─────────[39m[22m[1m[37m┼[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┤[39m[22m
[1m[37m│[39m[22m tcp      [1m[37m│[39m[22m 143   [1m[37m│[39m[22m imap    [1m[37m│[39m[22m ???                        [1m[37m│[39m[22m
[1m[37m├[39m[22m[1m[37m──────────[39m[22m[1m[37m┼[39m[22m[1m[37m───────[39m[22m[1m[37m┼[39m[22m[1m[37m─────────[39m[22m[1m[37m┼[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┤[39m[22m
[1m[37m│[39m[22m tcp      [1m[37m│[39m[22m 161   [1m[37m│[39m[22m snmp    [1m[37m│[39m[22m ???                        [1m[37m│[39m[22m
[1m[37m├[39m[22m[1m[37m──────────[39m[22m[1m[37m┼[39m[22m[1m[37m───────[39m[22m[1m[37m┼[39m[22m[1m[37m─────────[39m[22m[1m[37m┼[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┤[39m[22m
[1m[37m│[39m[22m tcp      [1m[37m│[39m[22m 443   [1m[37m│[39m[22m https   [1m[37m│[39m[22m ???                        [1m[37m│[39m[22m
[1m[37m├[39m[22m[1m[37m──────────[39m[22m[1m[37m┼[39m[22m[1m[37m───────[39m[22m[1m[37m┼[39m[22m[1m[37m─────────[39m[22m[1m[37m┼[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┤[39m[22m
[1m[37m│[39m[22m tcp      [1m[37m│[39m[22m 445   [1m[37m│[39m[22m smb     [1m[37m│[39m[22m ???                        [1m[37m│[39m[22m
[1m[37m├[39m[22m[1m[37m──────────[39m[22m[1m[37m┼[39m[22m[1m[37m───────[39m[22m[1m[37m┼[39m[22m[1m[37m─────────[39m[22m[1m[37m┼[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┤[39m[22m
[1m[37m│[39m[22m tcp      [1m[37m│[39m[22m 631   [1m[37m│[39m[22m ipp     [1m[37m│[39m[22m CUPS 2.2                   [1m[37m│[39m[22m
[1m[37m├[39m[22m[1m[37m──────────[39m[22m[1m[37m┼[39m[22m[1m[37m───────[39m[22m[1m[37m┼[39m[22m[1m[37m─────────[39m[22m[1m[37m┼[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┤[39m[22m
[1m[37m│[39m[22m tcp      [1m[37m│[39m[22m 17600 [1m[37m│[39m[22m http    [1m[37m│[39m[22m Tornado httpd 4.2          [1m[37m│[39m[22m
[1m[37m└[39m[22m[1m[37m──────────[39m[22m[1m[37m┴[39m[22m[1m[37m───────[39m[22m[1m[37m┴[39m[22m[1m[37m─────────[39m[22m[1m[37m┴[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┘[39m[22m
 ↳ [2mTry \\"pwngoal suggest\\" to get some suggestions on what to do next[22m

"
`;

exports[`pwngoal show doesNotExist 1`] = `"No results for [31m[1mdoesNotExist[22m[39m"`;

exports[`pwngoal show ipPassedAsTerm --ip doesNotExist 1`] = `"No results for [31m[1mipPassedAsTerm[22m[39m"`;

exports[`pwngoal show will render with no terms or options 1`] = `
"
 [36mShow scan results for 10.11.0.1[39m

 [36m[1m→[22m[39m [39m[36m[1m10.11.0.1[22m[39m[39m
   127.0.0.1
   192.2.1.41
   192.168.1.42
"
`;

exports[`pwngoal suggest will display select menu when passed IP term 1`] = `
"
 [36mShow suggestions for ftp[39m

 [36m[1m→[22m[39m [39m[36m[1mftp[22m[39m[39m
   ssh
   smtp
   dns
   pop3
   imap
   snmp
   https
   smb
   ipp
   http
"
`;

exports[`pwngoal suggest will render with no terms or options 1`] = `
"
 [36mSelect service for 10.11.0.1[39m

 [36m[1m→[22m[39m [39m[36m[1m10.11.0.1[22m[39m[39m
   127.0.0.1
   192.2.1.41
   192.168.1.42
"
`;
